src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    display: flex;
    flex-direction: column;
    place-items: center;
    width: 100%;
    height: 100dvh;
    margin: 0;
    padding: 0;
}

body {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    place-items: center;
    min-width: 320px;
    max-width: 600px;
    width: 100%;
    background-color: rgb(33, 33, 33) !important;
    height: 100vh;
    overflow: hidden;
}

.IntroBox {
    height: 100%;
}

.ChatPage {
    width: 100%;
    padding: 0px 10px 0px 10px;
    color: rgb(60, 60, 60) !important;
}

.UserInput {
    width: 90%;
    line-height: 30px;
    border: none;
    margin-top: 20px;
    padding: 10px;
    align-self: center;
    justify-self: flex-start;
    border-radius: 15px;
    position: sticky;
    bottom: 10px;
    height: 60px;
    line-height: 60px;
    z-index: 100;
    background-color: rgb(238, 238, 238);
}

.UserInput:focus {
    background-color: #f1eeee;
    outline: none;
}

.BotIcon {
    background-color: #e9e9e9;
    border-radius: 50%;
    padding: 10px;
    width: 100px;
    height: 100px;
    margin: 50px 0px 50px 0px;
}

.BotIcon--chat {
    width: 50px;
    height: 50px;
    padding: 6px;
}

.inputBox {
    height: auto;
    resize: both;
}

.UserBox__userOutput {
    width: 80%;
    line-height: 30px;
    border-radius: 10px;
    margin: -40px 20px 10px 0px;
    border: none;
    padding: 10px;
    z-index: -1;
    text-align: left;
    color: white;
}

.BotBox {
    width: 80%;
    line-height: 30px;
    border-radius: 10px;
    margin: -40px 0px 10px 20px;
    border: none;
    padding: 10px;
    z-index: -1;
    text-align: left;
    color: black;
}

.LoadSpinner {
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: rgba(1, 1, 1, 0.3);
    backdrop-filter: blur(2px);
    z-index: 9999;
}

.LoadSpinner__spinner {
    width: 80px;
    height: 80px;
    margin: 5px;
}

